tailwind typhography background border

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Intro to tailwind</title>
+	<script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 <body>
 	<header>
@@ -14,6 +16,21 @@
 			<h1>Ajke lej ber hobe e e hobe</h1>
 			<h3>na ber hoileo ami shikbo</h3>
 			<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis blanditiis qui nemo asperiores ipsam deserunt debitis harum non reiciendis perspiciatis ut voluptas cum architecto cumque illo possimus sequi, sapiente iusto?</p>
+		</section>
+		<section>
+			<h1 class="text-5xl">This is a large text</h1>
+			<h3 class="text-3xl">This is a medium text</h3>
+			<h1 class="text-8xl">very very big</h1>
+			<p>Normal Text</p>
+			<p class="text-blue-500">Blue Text</p>
+			<p class="font-bold">Normal Bold Text</p>
+			<p class="text-right">Text right</p>
+			<p class="text-center bg-orange-500">text center</p>
+
+			<div class="border border-amber-500">
+				<h3>Title</h3>
+				<p>content</p>
+			</div>
 		</section>
 	</main>
 </body>
