--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
 				<p>content</p>
 			</div>
 		</section>
+		<section>
+			<div class="w-4/5 my-5 mx-auto p-5 h-64 border overflow-scroll border-orange-600 border-8">
+				<h3>About us</h3>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quibusdam ex sunt? Laudantium, ea aut vel corrupti similique adipisci esse.</p>
+			</div>
+		</section>
 	</main>
 </body>
 </html>
