--- a/index.html
+++ b/index.html
@@ -38,6 +38,20 @@
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quibusdam ex sunt? Laudantium, ea aut vel corrupti similique adipisci esse.</p>
 			</div>
 		</section>
+		<hr>
+		<section>
+			<div class="md:bg-yellow-400 lg:bg-red-400">
+				<h3>My responsiveness</h3>
+				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam repudiandae ipsum molestias in possimus, sequi quibusdam. Eveniet minus quisquam culpa.</p>
+			</div>
+			<hr class="bg-orange-500">
+			<div class="h-80 md:flex md:justify-between">
+				<div class="w-32 h-32 border border-4 border-blue-400 rounded-lg text-2xl font-bold">item-1</div>
+				<div class="w-32 h-32 border border-4 border-blue-400 rounded-lg text-2xl font-bold">item-1</div>
+				<div class="w-32 h-32 border border-4 border-blue-400 rounded-lg text-2xl font-bold">item-1</div>
+				<div class="w-32 h-32 border border-4 border-blue-400 rounded-lg text-2xl font-bold">item-1</div>
+			</div>
+		</section>
 	</main>
 </body>
 </html>
