--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam repudiandae ipsum molestias in possimus, sequi quibusdam. Eveniet minus quisquam culpa.</p>
 			</div>
 			<hr class="bg-orange-500">
-			<div class="h-80 md:flex md:justify-between">
+			<div class="h-80 md:flex md:justify-between border-purple-400 border-2 overflow-scroll">
 				<div class="w-32 h-32 border border-4 border-blue-400 rounded-lg text-2xl font-bold">item-1</div>
 				<div class="w-32 h-32 border border-4 border-blue-400 rounded-lg text-2xl font-bold">item-1</div>
 				<div class="w-32 h-32 border border-4 border-blue-400 rounded-lg text-2xl font-bold">item-1</div>
