--- a/index.html
+++ b/index.html
@@ -52,6 +52,37 @@
 				<div class="w-32 h-32 border border-4 border-blue-400 rounded-lg text-2xl font-bold">item-1</div>
 			</div>
 		</section>
+		<hr>
+		<section>
+			<h3 class="text-3xl text-center">Grid Layout</h3>
+			<div class="grid sm:grid-cols-2 md:grid-cols-3  lg:grid-cols-4 gap-4 ">
+				<!-- .bg-pink-300.border.border-2.rounded-md{Box $}*24  -->
+				<div class="bg-pink-300 border border-2 rounded-md">Box 1</div>
+				<div class="bg-pink-300 border border-2 rounded-md">Box 2</div>
+				<div class="bg-pink-300 border border-2 rounded-md">Box 3</div>
+				<div class="bg-pink-300 border border-2 rounded-md md:col-span-3">Box 4</div>
+				<div class="bg-pink-300 border border-2 rounded-md">Box 5</div>
+				<div class="bg-pink-300 border border-2 rounded-md">Box 6</div>
+				<div class="bg-pink-300 border border-2 rounded-md col-span-2 row-span-2">Box 7</div>
+				<div class="bg-pink-300 border border-2 rounded-md">Box 8</div>
+				<div class="bg-pink-300 border border-2 rounded-md">Box 9</div>
+				<div class="bg-pink-300 border border-2 rounded-md">Box 10</div>
+				<div class="bg-pink-300 border border-2 rounded-md">Box 11</div>
+				<div class="bg-pink-300 border border-2 rounded-md">Box 12</div>
+				<div class="bg-pink-300 border border-2 rounded-md">Box 13</div>
+				<div class="bg-pink-300 border border-2 rounded-md">Box 14</div>
+				<div class="bg-pink-300 border border-2 rounded-md">Box 15</div>
+				<div class="bg-pink-300 border border-2 rounded-md">Box 16</div>
+				<div class="bg-pink-300 border border-2 rounded-md">Box 17</div>
+				<div class="bg-pink-300 border border-2 rounded-md">Box 18</div>
+				<div class="bg-pink-300 border border-2 rounded-md">Box 19</div>
+				<div class="bg-pink-300 border border-2 rounded-md">Box 20</div>
+				<div class="bg-pink-300 border border-2 rounded-md">Box 21</div>
+				<div class="bg-pink-300 border border-2 rounded-md">Box 22</div>
+				<div class="bg-pink-300 border border-2 rounded-md">Box 23</div>
+				<div class="bg-pink-300 border border-2 rounded-md">Box 24</div>
+			</div>
+		</section>
 	</main>
 </body>
 </html>
